syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AvatarFightPropUpdateNotify {
	uint64 avatar_guid = 1;
	map<uint32, float> fight_prop_map = 13;
}