syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "PropChangeReason.proto";
import "ChangeHpReason.proto";
import "PropChangeDetailInfo.proto";
import "ChangeHpDebtsReason.proto";
import "ChangeEnergyReason.proto";


message EntityFightPropChangeReasonNotify {
	float paid_hp_debts = 8;
	float prop_delta = 2;
	uint32 prop_type = 14;
	uint32 entity_id = 10;
	ChangeHpDebtsReason change_hp_debts = 9;
	ChangeHpReason change_hp_reason = 6;
	ChangeEnergyReason change_energy_reason = 15;
	PropChangeReason reason = 5;
	PropChangeDetailInfo detail_info = 11;
	repeated uint32 param_list = 13;
}